--- a/src/package.json
+++ b/src/package.json
@@ -4,9 +4,8 @@
   "description": "kirecipi",
   "main": "index.js",
   "dependencies": {
-    "vue": "^2.3.4"
-  },
-  "devDependencies": {
+    "babel-core": "^6.25.0",
+    "vue": "^2.3.4",
     "babel-loader": "^7.1.0",
     "babel-preset-env": "^1.5.2",
     "css-loader": "^0.28.4",
